--- a/viva/viva/index.html
+++ b/viva/viva/index.html
@@ -84,17 +84,18 @@ include("library/class_email_sender.php");
     <!-- Newsletter start here -->
     <section class="newsletter row fade-down">      
       
-            <form action="//afrussel.us10.list-manage.com/subscribe/post?u=9d80e0546273f34e306d026fe&amp;id=748920b40a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="contact col-md-6 fade-down validate" target="_blank" novalidate>
+          <!--   <form action="//afrussel.us10.list-manage.com/subscribe/post?u=9d80e0546273f34e306d026fe&amp;id=748920b40a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="contact col-md-6 fade-down validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll" class="form-group">
                 <div><span class="email-ico"> <i class="fa fa-envelope-o"></i> </span>
               <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email here to stay tuned">          </div>
             <div id="mce-responses" class="clear">
                 <div class="response" id="mce-error-response" style="display:none"></div>
                 <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;"><input type="text" name="b_9d80e0546273f34e306d026fe_748920b40a" tabindex="-1" value=""></div>
+            </div>  -->   
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+         <!--    <div style="position: absolute; left: -5000px;"><input type="text" name="b_9d80e0546273f34e306d026fe_748920b40a" tabindex="-1" value=""></div>
             <div class="clear"><input type="submit" value="Submit" name="Submit" id="mc-embedded-subscribe" class="btn-submit"></div>
-            </div>
+            </div -->>
         </form>
     </section>
     <!-- Newsletter end here -->
@@ -148,7 +149,7 @@ include("library/class_email_sender.php");
 
         <!--Email Sending Script -->
 
-        <?php 
+     <   <?php 
       $name="";
       $from="";
       $message="";
@@ -221,7 +222,6 @@ include("library/class_email_sender.php");
       </div>
     </div>
 
-    <img src = "img/logo.png" class = "img-circle">
 <!-- Contact end here --> 
     <!-- Main container start here -->
     <!-- Javascript framework and plugins start here -->
