--- a/viva/viva/index.html
+++ b/viva/viva/index.html
@@ -56,7 +56,7 @@ include("library/class_email_sender.php");
     <!-- Logo end here -->
     <!-- Slogan start here -->
     <section class="slogan fade-down">
-      <h1>Our website is under construction. Subscribe to be notified when it is ready.</h1>     
+      <h1>VIVA CARNAVAL</h1>     
     </section>
     <!-- Slogan end here -->
     <!-- Count Down start here -->
@@ -84,18 +84,18 @@ include("library/class_email_sender.php");
     <!-- Newsletter start here -->
     <section class="newsletter row fade-down">      
       
-          <!--   <form action="//afrussel.us10.list-manage.com/subscribe/post?u=9d80e0546273f34e306d026fe&amp;id=748920b40a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="contact col-md-6 fade-down validate" target="_blank" novalidate>
+            <form  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="contact col-md-6 fade-down validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll" class="form-group">
                 <div><span class="email-ico"> <i class="fa fa-envelope-o"></i> </span>
               <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email here to stay tuned">          </div>
             <div id="mce-responses" class="clear">
                 <div class="response" id="mce-error-response" style="display:none"></div>
                 <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>  -->   
+            </div>    
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-         <!--    <div style="position: absolute; left: -5000px;"><input type="text" name="b_9d80e0546273f34e306d026fe_748920b40a" tabindex="-1" value=""></div>
+            <div style="position: absolute; left: -5000px;"><input type="text" name="b_9d80e0546273f34e306d026fe_748920b40a" tabindex="-1" value=""></div>
             <div class="clear"><input type="submit" value="Submit" name="Submit" id="mc-embedded-subscribe" class="btn-submit"></div>
-            </div -->>
+            </div>
         </form>
     </section>
     <!-- Newsletter end here -->
