--- a/viva/viva/index.html
+++ b/viva/viva/index.html
@@ -42,8 +42,8 @@ include("library/class_email_sender.php");
 <!-- About Icon end here -->  
 <!-- Contact Icon start here -->
   <div class="contact-us"> 
-    <a href="#" class="fa fa-envelope-o tool-tip" data-toggle="modal" data-target=".bs-example-modal-lg2"  data-placement="left" title="Contact"></a>
-  </div>
+<!--     <a href="#" class="fa fa-envelope-o tool-tip" data-toggle="modal" data-target=".bs-example-modal-lg2"  data-placement="left" title="Contact"></a>
+ -->  </div>
 <!-- Contact Icon end here -->
   <!-- Main container start here -->
   <section class="container main-wrapper">
@@ -109,7 +109,7 @@ include("library/class_email_sender.php");
     <!-- Social icons end here -->
     <!-- Footer start here -->
     <footer class="fade-down">        
-      <p class="footer-text">&copy; Viva Carnaval 2015, All Rights Reserved.</p>
+      <p class="footer-text">&copy; Viva Carnaval 2016, All Rights Reserved.</p>
     </footer>
     <!-- Footer end here -->
   </section>
