--- a/viva/viva/index.html
+++ b/viva/viva/index.html
@@ -9,7 +9,7 @@ include("library/class_email_sender.php");
 <head>
   <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Viva.com is Comming Soon</title>
+  <title>Viva Carnaval</title>
     
     <!-- Favicons -->
     <!-- <link rel="shortcut icon" href="favicon.ico"> -->
@@ -101,10 +101,9 @@ include("library/class_email_sender.php");
     <!-- Newsletter end here -->
     <!-- Social icons start here -->
     <ul class="connect-us row fade-down">
-      <li><a href="#" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-      <li><a href="#" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
-      <li><a href="#" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
+      <li><a href="https://facebook.com/viva_carnaval813" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+      <li><a href="https://twitter.com/VivaCarnaval813" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+      <li><a href="https://www.instagram.com/vivacarnaval813/" class="ytube tool-tip" title="Instagram"><i class="fa fa-instagram"></i></a></li>
     </ul>
     <!-- Social icons end here -->
     <!-- Footer start here -->
@@ -121,7 +120,7 @@ include("library/class_email_sender.php");
         <h3>About US</h3>
         <div class="clearfix">
         <div>
-          <p>Viva Carnaval is an annual event located in the beautiful Tampa, Florida. It is sponsored by Out of the Night Entertainment.</p>
+          <p>Viva Carnaval is an annual event located in the beautiful Tampa, Florida during Labor Day weekend (September 2-4 2016). It is sponsored by Out of the Night Entertainment.</p>
           <p>Package information will be posted soon so be sure to keep checking.</p>
           <p>Here are some reasons to attend Viva Carnaval:</p>
         </div>
