--- a/viva/viva/index.html
+++ b/viva/viva/index.html
@@ -101,7 +101,7 @@ include("library/class_email_sender.php");
     <!-- Newsletter end here -->
     <!-- Social icons start here -->
     <ul class="connect-us row fade-down">
-      <li><a href="https://facebook.com/viva_carnaval813" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+      <li><a href="https://facebook.com/vivacarnaval813" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
       <li><a href="https://twitter.com/VivaCarnaval813" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
       <li><a href="https://www.instagram.com/vivacarnaval813/" class="ytube tool-tip" title="Instagram"><i class="fa fa-instagram"></i></a></li>
     </ul>
